[package]
name = "game"
version = "0.1.0"
authors = ["Redfox <vitor_pereira.2013@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "0.16.1"
specs-derive = "0.4.1"
rand = "0.6"

[dependencies.sdl2]
version = "0.34.3"
default-feature = false
features = ["image"]
